    argument be concatenated with the option.

  From Joel B. Mohler:

  - Extend latex.py, pdflatex.py, pdftex.py and tex.py so that building
    from both TeX and LaTeX files uses the same logic to call $BIBTEX
    when it's necessary, to call $MAKEINDEX when it's necessary, and to
    call $TEX or $LATEX multiple times to handle undefined references.

  From Elliot Murphy:

  - Enhance the tests to guarantee persistence of ListOption
    values in saved options files.

  - Supply the help text when -h is used with the -u, -U or -D options.

  From Leanid Nazdrynau:

  - Fix the Java parser's handling of backslashes in strings.

  - Fix the Qt UIC scanner to work with generated .ui files (by using
    the FindFile() function instead of checking by-hand for the file).

  From Christian Neeb:

  - Fix the Java parser's handling of string definitions to avoid ignoring
    subsequent code.

  From Han-Wen Nienhuys:

  - Optimize variable expansion by:  using the re.sub() method (when
    possible); not using "eval" for variables for which we can fetch the
    value directory; avoiding slowing substitution logic when there's no
    '$' in the string.

  From Jan Nieuwenhuizen:

  - Fix a problem with interpreting quoted argument lists on command lines.

  From Greg Noel:

  - Add construction variables to support frameworks on Mac OS X:
    $FRAMEWORKS, $FRAMEWORKPREFIX, $FRAMEWORKPATH, $FRAMEWORKPATHPREFIX.

  - Re-order link lines so the -o option always comes right after the
    command name.

  - Add /sw/bin to the default execution PATH on Mac OS X.

  From Gary Oberbrunner:

  - Add an Environment.Dump() method to print the contents of a
    construction environment.

  - Allow $LIBS (and similar variables) to contain explicit File Nodes.

  - Change ParseConfig to add the found library names directly to the
    $LIBS variable, instead of returning them.

  - Add ParseConfig() support for the -framework GNU linker option.
